--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@ body {
     <p>Manifold AI Learning ® is an online Academy with the goal to empower the students with the knowledge and skills that can be directly applied to solving the Real world problems in Data Science, Machine Learning and Artificial intelligence.</p>
     <h3>Our Courses</h3>
     <p>Join us on Youtube and start learning for free</p>
-    <div class="fakeimg" style="height:60px;"> <a href="https://www.youtube.com/manifoldailearning" class="right">Youtube Hands-On ML Series </a> </div><br>
+    <div class="fakeimg" style="height:60px;"> <a href="https://www.youtube.com/manifoldailearning" class="right">Youtube Hands-On ML Series Trigger </a> </div><br>
     <div class="fakeimg" style="height:60px;"> <a href="https://www.youtube.com/manifoldailearning" class="right">Youtube Deep Learning Series </a> </div><br>
     <div class="fakeimg" style="height:60px;"><a href="https://www.youtube.com/manifoldailearning" class="right"> Deep Learning Tips and Tricks </a> </div><br>
     <div class="fakeimg" style="height:60px;"><a href="https://www.youtube.com/manifoldailearning" class="right"> Python for Data Science </a> </div><br>
      <div class="fakeimg" style="height:60px;"><a href="https://www.youtube.com/manifoldailearning" class="right"> Deep Learning with Pytorch </a> </div><br>
   </div>
   <div class="main">
-    <h2>TITLE HEADING</h2>
+    <h2>TITLE HEADING </h2>
     <h5>Title description, Dec 7, 2017</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
     <p>Some text..</p>
